feat: Search users by name and/or email Update OpenAPI contract
