# users-management-api/src/main/java/io/florianlopes/usersmanagement/api/users/domain/query/UserFilter.java
@@ -1,0 +1,26 @@
+package io.florianlopes.usersmanagement.api.users.domain.query;
+
+public class UserFilter {
+
+    private final String firstName;
+    private final String lastName;
+    private final String email;
+
+    public UserFilter(String firstName, String lastName, String email) {
+        this.firstName = firstName;
+        this.lastName = lastName;
+        this.email = email;
+    }
+
+    public String getFirstName() {
+        return firstName;
+    }
+
+    public String getLastName() {
+        return lastName;
+    }
+
+    public String getEmail() {
+        return email;
+    }
+}
